--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 title: Harrison Glenn
-email: your-email@example.com
+email: harrisonabglenn@gmail.com
 description: >-
   I am Harrison Glenn, a student at the University of Sydney (USYD).
   I am fascinated by artificial intelligence, software development, and the art of testing software.
