--- a/_config.yaml
+++ b/_config.yaml
@@ -3,14 +3,10 @@ email: harrisonabglenn@gmail.com
 description: >-
   I am Harrison Glenn, a student at the University of Sydney (USYD).
   I am fascinated by artificial intelligence, software development, and the art of testing software.
-  
 baseurl: ""
 url: "https://harrymanual.github.io"
-
 markdown: kramdown
 theme: minima
 
-feed:
-  path: /feed.xml
-  limit: 20
-  excerpt_only: true
+plugins:
+  - jekyll-feed
